@@ -1,9 +1,7 @@
 package org.sopt.app.application.notification;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import lombok.RequiredArgsConstructor;
 import lombok.val;
@@ -14,7 +12,6 @@ import org.sopt.app.domain.entity.User;
 import org.sopt.app.domain.enums.NotificationType;
 import org.sopt.app.interfaces.postgres.NotificationRepository;
 import org.sopt.app.interfaces.postgres.UserRepository;
-import org.sopt.app.presentation.notification.NotificationRequest;
 import org.sopt.app.presentation.notification.NotificationRequest.RegisterNotificationRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -40,34 +37,21 @@ public class NotificationService {
 
     @Transactional
     public void registerNotification(RegisterNotificationRequest registerNotificationRequest) {
-        List<Long> playgroundIds = new ArrayList<>();
         if (registerNotificationRequest.getType().equals(NotificationType.SEND_ALL)) {
-            playgroundIds = userRepository.findAllPlaygroundId();
-        } else if (registerNotificationRequest.getType().equals(NotificationType.SEND)) {
-            playgroundIds = registerNotificationRequest.getPlaygroundIds().stream()
-                    .map(Long::parseLong)
-                    .toList();
+            registerTo(userRepository.findAllPlaygroundId(), registerNotificationRequest);
+            return;
         }
-        registerTo(playgroundIds, registerNotificationRequest);
+
+        if (registerNotificationRequest.getType().equals(NotificationType.SEND)) {
+            registerTo(registerNotificationRequest.getPlaygroundIds().stream().map(Long::parseLong).toList(),
+                    registerNotificationRequest);
+        }
     }
-    private void registerTo(List<Long> playgroundIds, NotificationRequest.RegisterNotificationRequest registerNotificationRequest) {
+    private void registerTo(List<Long> playgroundIds, RegisterNotificationRequest request) {
         val targetUserIds = userRepository.findAllIdByPlaygroundIdIn(playgroundIds);
-        val notifications = targetUserIds.stream()
-                .map(userId -> Notification.builder()
-                        .userId(userId)
-                        .notificationId(registerNotificationRequest.getNotificationId())
-                        .title(registerNotificationRequest.getTitle())
-                        .content(registerNotificationRequest.getContent())
-                        .type(registerNotificationRequest.getType())
-                        .category(registerNotificationRequest.getCategory())
-                        .deepLink(registerNotificationRequest.getDeepLink())
-                        .webLink(registerNotificationRequest.getWebLink())
-                        .isRead(false)
-                        .build()
-                ).toList();
+        val notifications = targetUserIds.stream().map(userId -> request.toEntity(request, userId)).toList();
         notificationRepository.saveAll(notifications);
     }
-
 
     @Transactional
     public void updateNotificationIsRead(User user, String notificationId) {
@@ -75,15 +59,6 @@ public class NotificationService {
             updateAllNotificationIsRead(user);
         } else {
             updateSingleNotificationIsRead(user, notificationId);
-        }
-    }
-    @Transactional
-    @Deprecated
-    public void updateNotificationIsReadDeprecated(User user, Long notificationId) {
-        if (Objects.isNull(notificationId)) {
-            updateAllNotificationIsRead(user);
-        } else {
-            updateSingleNotificationIsReadDeprecated(user, notificationId);
         }
     }
 
@@ -94,28 +69,15 @@ public class NotificationService {
         notificationRepository.save(notification);
     }
 
-    @Deprecated
-    private void updateSingleNotificationIsReadDeprecated(User user, Long notificationId) {
-        val notification = notificationRepository.findByIdAndUserId(notificationId, user.getId())
-                .orElseThrow(() -> new BadRequestException(ErrorCode.NOTIFICATION_NOT_FOUND));
-        notification.updateIsRead();
-        notificationRepository.save(notification);
-    }
-
     private void updateAllNotificationIsRead(User user) {
         val notificationList = notificationRepository.findAllByUserId(user.getId());
-        val readNotificationList = notificationList.stream()
-                .map(notification -> {
-                        notification.updateIsRead();
-                        return notification;
-                    }
-                ).collect(Collectors.toList());
+        val readNotificationList = notificationList.stream().peek(Notification::updateIsRead).toList();
         notificationRepository.saveAll(readNotificationList);
     }
 
     @Transactional(readOnly = true)
-    public Boolean getNotificationConfirmStatus(User user) {
-        val notificationList = notificationRepository.findAllByUserId(user.getId());
+    public boolean getNotificationConfirmStatus(Long userId) {
+        val notificationList = notificationRepository.findAllByUserId(userId);
         val unreadNotificationList = notificationList.stream()
                 .filter(notification -> !notification.getIsRead())
                 .toList();
